Start work on the startup script for Linux / macOS