@@ -29,6 +29,12 @@ ext.addVersionInfo(sourceSets.getByName("main"), "TRAC Metadata Service")
 application {
 
     mainClass.set("org.finos.tracdap.svc.meta.TracMetadataService")
+
+    applicationDefaultJvmArgs = [
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED"
+    ]
+
     tasks.run.workingDir = rootProject.projectDir
 
     // JVM flags needed for Arrow / Netty / gRPC to access native memory
